# toggl-to-sqlite

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  contributing.md  justfile  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
docs/: index.md  requirements.txt
src/toggl_to_sqlite/: __init__.py  _version.py  cli.py  utils.py
tests/: test_classes.py  test_cli_auth.py  test_cli_since_logic.py  test_init.py  test_since_logic.py  test_toggl_to_sqlite.py  test_utils.py  toggl.json
toggl_to_sqlite/: cli.py  utils.py
