[project]
name = "toggl-to-sqlite"
dynamic = ["version"]
description = "Create a SQLite database containing data from your Toggl account"
readme = "README.md"
authors = [{name = "Ryan Cheley"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "sqlite-utils>=2.4.4",
    "click",
    "requests",
    "requests_mock",
    "toml",
    "packaging>=25.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/toggl_to_sqlite/_version.py"

[project.scripts]
toggl-to-sqlite = "toggl_to_sqlite.cli:cli"

[project.urls]
Issues = "https://github.com/ryancheley/toggl-to-sqlite/issues"
CI = "https://github.com/ryancheley/toggl-to-sqlite/actions"
Changelog = "https://github.com/ryancheley/toggl-to-sqlite/releases"
Documentation = "https://github.com/ryancheley/toggl-to-sqlite/blob/main/README.md"

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
    "coverage",
    "mypy",
    "cogapp",
    "pre-commit"
]

[tool.ruff]
line-length = 130
target-version = "py310"
exclude = [
    "_version.py",
    "src/toggl_to_sqlite/_version.py"
]

[tool.ruff.lint]
extend-select = ["I"]  # Enable isort rules

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/toggl_to_sqlite/_version.py",
    "*/_version.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "hatch-vcs>=0.5.0",
    "hatchling>=1.27.0",
]
